@@ -4,16 +4,12 @@ import org.joml.Matrix4d;
 import vulkan.VkDescriptorBufferInfo;
 import vulkan.VkWriteDescriptorSet;
 import yionos.demo.StackAllocator;
-import yionos.demo.app.Camera;
-import yionos.demo.app.NuklearContext;
-import yionos.demo.app.VulkanRenderer;
-import yionos.demo.app.WindowInputMap;
+import yionos.demo.app.*;
 import yionos.demo.app.scene.ObjectRenderer;
 import yionos.demo.rendering.VulkanBuffer;
 
 import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.ValueLayout;
 
 import static nuklear.Nuklear.*;
 import static nuklear.nk_panel_flags.*;
@@ -23,6 +19,7 @@ import static vulkan.VkStructureType.*;
 import static vulkan.VkBufferUsageFlagBits.*;
 import static vulkan.VkDescriptorType.*;
 import static vma.VmaMemoryUsage.*;
+import static java.lang.foreign.ValueLayout.*;
 import static java.lang.foreign.MemorySegment.NULL;
 
 public class InstancingSample implements DemoSample
@@ -33,18 +30,19 @@ public class InstancingSample implements DemoSample
     private final MemorySegment m_frameObjectDescriptorSets;
     private final VulkanBuffer[] m_objectBuffers = new VulkanBuffer[VulkanRenderer.gFrameCount];
     private int m_drawCount = MAX_DRAW_COUNT;
+    private final Arena m_bufferArena = Arena.ofConfined();
 
     public InstancingSample(VulkanRenderer renderer)
     {
         try (Arena arena = Arena.ofConfined())
         {
-            MemorySegment pSetLayouts = arena.allocateArray(ValueLayout.ADDRESS, this.m_objectBuffers.length);
+            MemorySegment pSetLayouts = arena.allocate(ADDRESS, this.m_objectBuffers.length);
             for (int i = 0; i < this.m_objectBuffers.length; i++)
             {
-                pSetLayouts.setAtIndex(ValueLayout.ADDRESS, i, renderer.descriptorSetLayouts().objectBuffer());
+                pSetLayouts.setAtIndex(ADDRESS, i, renderer.descriptorSetLayouts().objectBuffer());
             }
 
-            this.m_frameObjectDescriptorSets = Arena.ofAuto().allocateArray(ValueLayout.ADDRESS, this.m_objectBuffers.length);
+            this.m_frameObjectDescriptorSets = this.m_bufferArena.allocate(ADDRESS, this.m_objectBuffers.length);
             renderer.descriptorPool().allocateDescriptorSets(this.m_objectBuffers.length, pSetLayouts, this.m_frameObjectDescriptorSets);
 
             VkDescriptorBufferInfo descriptorBufferInfo = new VkDescriptorBufferInfo(arena);
@@ -64,7 +62,7 @@ public class InstancingSample implements DemoSample
                 descriptorBufferInfo.offset(0);
                 descriptorBufferInfo.range(this.m_objectBuffers[i].size());
 
-                writeDescriptorSet.dstSet(this.m_frameObjectDescriptorSets.getAtIndex(ValueLayout.ADDRESS, i));
+                writeDescriptorSet.dstSet(this.m_frameObjectDescriptorSets.getAtIndex(ADDRESS, i));
 
                 vkUpdateDescriptorSets(renderer.logicalDevice().handle(), 1, writeDescriptorSet.ptr(), 0, NULL);
             }
@@ -92,9 +90,9 @@ public class InstancingSample implements DemoSample
 
         try (Arena arena = StackAllocator.stackPush())
         {
-            MemorySegment ppData = arena.allocate(ValueLayout.ADDRESS);
+            MemorySegment ppData = arena.allocate(ADDRESS);
             buffer.map(ppData);
-            MemorySegment pData = ppData.get(ValueLayout.ADDRESS, 0).reinterpret(buffer.size());
+            MemorySegment pData = ppData.get(ADDRESS, 0).reinterpret(buffer.size());
 
             Matrix4d transform = new Matrix4d();
 
@@ -114,7 +112,7 @@ public class InstancingSample implements DemoSample
 
                         transform.translation(x * 2 - 100, Math.sin(epsilon * x * z) + y * 2 - 100, z * 2 - 100);
 
-                        transform.get(pData.asSlice((long) objectIndex * 16 * Float.BYTES).asByteBuffer().asFloatBuffer());
+                        MemoryUtil.getMatrix4dFloats(transform, pData.asSlice((long) objectIndex * 16 * Float.BYTES));
                         ++objectIndex;
                     }
                 }
@@ -124,7 +122,7 @@ public class InstancingSample implements DemoSample
         }
 
         this.renderer.bindGraphicsPipeline(this.renderer.pipelines().objectDebugInstanced());
-        this.renderer.bindGraphicsDescriptorSets(this.renderer.pipelineLayouts().objectDebugInstanced(), 0, 1, this.m_frameObjectDescriptorSets.asSlice(frame * ValueLayout.ADDRESS.byteSize()), 0, NULL);
+        this.renderer.bindGraphicsDescriptorSets(this.renderer.pipelineLayouts().objectDebugInstanced(), 0, 1, this.m_frameObjectDescriptorSets.asSlice(frame * ADDRESS.byteSize()), 0, NULL);
         this.renderer.renderObjectsInstanced(camera, this.m_drawCount, ObjectRenderer.Type.CUBE);
     }
 
@@ -133,15 +131,15 @@ public class InstancingSample implements DemoSample
     {
         try (Arena arena = StackAllocator.stackPush())
         {
-            if (nk_begin(context.pContext(), arena.allocateUtf8String("Scene configuration"), nk_rect(arena, 20, 300, 230, 250),
+            if (nk_begin(context.pContext(), arena.allocateFrom("Scene configuration"), nk_rect(arena, 20, 300, 230, 250),
                     NK_WINDOW_BORDER | NK_WINDOW_MOVABLE | NK_WINDOW_TITLE | NK_WINDOW_MINIMIZABLE) != 0)
             {
                 nk_layout_row_dynamic(context.pContext(), 20, 2);
-                nk_label(context.pContext(), arena.allocateUtf8String("Draw count:"), NK_TEXT_ALIGN_LEFT);
-                MemorySegment pCount = arena.allocate(ValueLayout.JAVA_INT, this.m_drawCount);
+                nk_label(context.pContext(), arena.allocateFrom("Draw count:"), NK_TEXT_ALIGN_LEFT);
+                MemorySegment pCount = arena.allocateFrom(JAVA_INT, this.m_drawCount);
                 if (nk_slider_int(context.pContext(), 0, pCount, MAX_DRAW_COUNT, 100000) != 0)
                 {
-                    this.m_drawCount = pCount.get(ValueLayout.JAVA_INT, 0);
+                    this.m_drawCount = pCount.get(JAVA_INT, 0);
                 }
             }
 
@@ -159,5 +157,6 @@ public class InstancingSample implements DemoSample
         }
 
         renderer.descriptorPool().freeDescriptorSets(this.m_objectBuffers.length, this.m_frameObjectDescriptorSets);
+        this.m_bufferArena.close();
     }
 }
