@@ -9,12 +9,12 @@ import yionos.demo.SequenceInitializer;
 
 import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.ValueLayout;
 import java.util.*;
 
 import static vulkan.VulkanCore.*;
 import static vulkan.VkStructureType.*;
 import static vma.VMA.*;
+import static java.lang.foreign.ValueLayout.*;
 import static java.lang.foreign.MemorySegment.NULL;
 import static yionos.demo.rendering.VulkanContext.gVulkanLogger;
 
@@ -49,7 +49,6 @@ public class LogicalDevice implements Disposable
             VkDeviceCreateInfo deviceCreateInfo = new VkDeviceCreateInfo(arena);
             deviceCreateInfo.sType(VK_STRUCTURE_TYPE_DEVICE_CREATE_INFO);
             deviceCreateInfo.pNext(pNext);
-            deviceCreateInfo.flags(0);
             deviceCreateInfo.queueCreateInfoCount(arrangedDescriptors.size());
             deviceCreateInfo.pQueueCreateInfos(queueCreateInfos);
             deviceCreateInfo.enabledLayerCount(enabledLayers.length);
@@ -58,24 +57,24 @@ public class LogicalDevice implements Disposable
             deviceCreateInfo.ppEnabledExtensionNames(ForeignUtils.allocateUtf8Array(arena, enabledExtensions));
             deviceCreateInfo.pEnabledFeatures(pEnabledFeatures);
 
-            MemorySegment pDevice = arena.allocate(ValueLayout.ADDRESS);
+            MemorySegment pDevice = arena.allocate(ADDRESS);
             VulkanException.check(vkCreateDevice(physicalDevice.handle(), deviceCreateInfo.ptr(), NULL, pDevice), "Unable to create vulkan device", initializer);
-            this.m_device = new VkDevice(pDevice.get(ValueLayout.ADDRESS, 0));
+            this.m_device = new VkDevice(pDevice.get(ADDRESS, 0));
             initializer.push(this::destroyHandle);
 
-            MemorySegment pAllocator = arena.allocate(ValueLayout.ADDRESS);
+            MemorySegment pAllocator = arena.allocate(ADDRESS);
             VulkanException.check(createVmaAllocator(physicalDevice.handle(), this.m_device, pAllocator), "Unable to create VMA allocator.", initializer);
-            this.m_allocator = pAllocator.get(ValueLayout.ADDRESS, 0);
+            this.m_allocator = pAllocator.get(ADDRESS, 0);
             initializer.push(this::destroyAllocator);
 
             this.m_queues = new Queue[queueDescriptors.length];
-            MemorySegment pQueue = arena.allocate(ValueLayout.ADDRESS);
+            MemorySegment pQueue = arena.allocate(ADDRESS);
             for (int i = 0; i < this.m_queues.length; i++)
             {
                 int family = queueDescriptors[i].family;
                 int index = arrangedDescriptors.get(family).indexOf(i);
                 vkGetDeviceQueue(this.m_device, family, index, pQueue);
-                this.m_queues[i] = new Queue(new VkQueue(pQueue.get(ValueLayout.ADDRESS, 0), this.m_device), family, index);
+                this.m_queues[i] = new Queue(new VkQueue(pQueue.get(ADDRESS, 0), this.m_device), family, index);
             }
 
             this.physicalDevice = physicalDevice;
@@ -86,10 +85,10 @@ public class LogicalDevice implements Disposable
     {
         try (Arena arena = Arena.ofConfined())
         {
-            MemorySegment pLayerCount = arena.allocate(ValueLayout.JAVA_INT, 0);
+            MemorySegment pLayerCount = arena.allocate(JAVA_INT);
             VulkanException.check(vkEnumerateDeviceLayerProperties(physicalDevice, pLayerCount, NULL));
-            int layerCount = pLayerCount.get(ValueLayout.JAVA_INT, 0);
-            MemorySegment pAvailableLayers = arena.allocateArray(VkLayerProperties.gStructLayout, layerCount);
+            int layerCount = pLayerCount.get(JAVA_INT, 0);
+            MemorySegment pAvailableLayers = arena.allocate(VkLayerProperties.gRecordLayout, layerCount);
             VulkanException.check(vkEnumerateDeviceLayerProperties(physicalDevice, pLayerCount, pAvailableLayers));
 
             return Arrays.stream(layers).filter(candidate ->
@@ -97,7 +96,7 @@ public class LogicalDevice implements Disposable
                 for (int i = 0; i < layerCount; i++)
                 {
                     VkLayerProperties properties = VkLayerProperties.getAtIndex(pAvailableLayers, i);
-                    String name = properties.layerName().getUtf8String(0);
+                    String name = properties.layerName().getString(0);
 
                     if (name.equals(candidate))
                     {
@@ -105,7 +104,7 @@ public class LogicalDevice implements Disposable
                     }
                 }
 
-                gVulkanLogger.warn(STR."Device layer not present: \{candidate}");
+                gVulkanLogger.warn("Device layer not present: {}", candidate);
                 return false;
             }).toArray(String[]::new);
         }
@@ -115,10 +114,10 @@ public class LogicalDevice implements Disposable
     {
         try (Arena arena = Arena.ofConfined())
         {
-            MemorySegment pExtensionCount = arena.allocate(ValueLayout.JAVA_INT, 0);
+            MemorySegment pExtensionCount = arena.allocate(JAVA_INT);
             VulkanException.check(vkEnumerateDeviceExtensionProperties(physicalDevice, NULL, pExtensionCount, NULL));
-            int extensionCount = pExtensionCount.get(ValueLayout.JAVA_INT, 0);
-            MemorySegment pAvailableExtensions = arena.allocateArray(VkExtensionProperties.gStructLayout, extensionCount);
+            int extensionCount = pExtensionCount.get(JAVA_INT, 0);
+            MemorySegment pAvailableExtensions = arena.allocate(VkExtensionProperties.gRecordLayout, extensionCount);
             VulkanException.check(vkEnumerateDeviceExtensionProperties(physicalDevice, NULL, pExtensionCount, pAvailableExtensions));
 
             return Arrays.stream(extensions).filter(candidate ->
@@ -126,7 +125,7 @@ public class LogicalDevice implements Disposable
                 for (int i = 0; i < extensionCount; i++)
                 {
                     VkExtensionProperties properties = VkExtensionProperties.getAtIndex(pAvailableExtensions, i);
-                    String name = properties.extensionName().getUtf8String(0);
+                    String name = properties.extensionName().getString(0);
 
                     if (name.equals(candidate))
                     {
@@ -134,7 +133,7 @@ public class LogicalDevice implements Disposable
                     }
                 }
 
-                gVulkanLogger.warn(STR."Device extension not present: \{candidate}");
+                gVulkanLogger.warn("Device extension not present: {}", candidate);
                 return false;
             }).toArray(String[]::new);
         }
@@ -142,21 +141,19 @@ public class LogicalDevice implements Disposable
 
     private static MemorySegment createQueueCreateInfos(Arena arena, Map<Integer, List<Integer>> arrangedDescriptors, QueueDescriptor[] queueDescriptors)
     {
-        MemorySegment queueCreateInfos  = arena.allocateArray(VkDeviceQueueCreateInfo.gStructLayout, arrangedDescriptors.size());
+        MemorySegment queueCreateInfos  = arena.allocate(VkDeviceQueueCreateInfo.gRecordLayout, arrangedDescriptors.size());
         int structIndex = 0;
         for (Map.Entry<Integer, List<Integer>> entry : arrangedDescriptors.entrySet())
         {
             int numQueues = entry.getValue().size();
-            MemorySegment priorities = arena.allocateArray(ValueLayout.JAVA_FLOAT, numQueues);
+            MemorySegment priorities = arena.allocate(JAVA_FLOAT, numQueues);
             for (int i = 0; i < numQueues; i++)
             {
-                priorities.setAtIndex(ValueLayout.JAVA_FLOAT, i, queueDescriptors[entry.getValue().get(i)].priority);
+                priorities.setAtIndex(JAVA_FLOAT, i, queueDescriptors[entry.getValue().get(i)].priority);
             }
 
             VkDeviceQueueCreateInfo queueCreateInfo = VkDeviceQueueCreateInfo.getAtIndex(queueCreateInfos, structIndex);
             queueCreateInfo.sType(VK_STRUCTURE_TYPE_DEVICE_QUEUE_CREATE_INFO);
-            queueCreateInfo.pNext(NULL);
-            queueCreateInfo.flags(0);
             queueCreateInfo.queueFamilyIndex(entry.getKey());
             queueCreateInfo.queueCount(numQueues);
             queueCreateInfo.pQueuePriorities(priorities);
@@ -172,30 +169,30 @@ public class LogicalDevice implements Disposable
         {
             VmaVulkanFunctions vulkanFunctions = new VmaVulkanFunctions(arena);
             // These two are unnecessary as VMA_DYNAMIC_VULKAN_FUNCTIONS is not set
-            vulkanFunctions.vkGetInstanceProcAddr(MTD_ADDRESS$vkGetInstanceProcAddr);
-            vulkanFunctions.vkGetDeviceProcAddr(MTD_ADDRESS$vkGetDeviceProcAddr);
-            vulkanFunctions.vkGetPhysicalDeviceProperties(physicalDevice.instance().funcAddress__vkGetPhysicalDeviceProperties);
-            vulkanFunctions.vkGetPhysicalDeviceMemoryProperties(physicalDevice.instance().funcAddress__vkGetPhysicalDeviceMemoryProperties);
-            vulkanFunctions.vkAllocateMemory(device.funcAddress__vkAllocateMemory);
-            vulkanFunctions.vkFreeMemory(device.funcAddress__vkFreeMemory);
-            vulkanFunctions.vkMapMemory(device.funcAddress__vkMapMemory);
-            vulkanFunctions.vkUnmapMemory(device.funcAddress__vkUnmapMemory);
-            vulkanFunctions.vkFlushMappedMemoryRanges(device.funcAddress__vkFlushMappedMemoryRanges);
-            vulkanFunctions.vkInvalidateMappedMemoryRanges(device.funcAddress__vkInvalidateMappedMemoryRanges);
-            vulkanFunctions.vkBindBufferMemory(device.funcAddress__vkBindBufferMemory);
-            vulkanFunctions.vkBindImageMemory(device.funcAddress__vkBindImageMemory);
-            vulkanFunctions.vkGetBufferMemoryRequirements(device.funcAddress__vkGetBufferMemoryRequirements);
-            vulkanFunctions.vkGetImageMemoryRequirements(device.funcAddress__vkGetImageMemoryRequirements);
-            vulkanFunctions.vkCreateBuffer(device.funcAddress__vkCreateBuffer);
-            vulkanFunctions.vkDestroyBuffer(device.funcAddress__vkDestroyBuffer);
-            vulkanFunctions.vkCreateImage(device.funcAddress__vkCreateImage);
-            vulkanFunctions.vkDestroyImage(device.funcAddress__vkDestroyImage);
-            vulkanFunctions.vkCmdCopyBuffer(device.funcAddress__vkCmdCopyBuffer);
-            vulkanFunctions.vkGetBufferMemoryRequirements2KHR(device.funcAddress__vkGetBufferMemoryRequirements2KHR);
-            vulkanFunctions.vkGetImageMemoryRequirements2KHR(device.funcAddress__vkGetImageMemoryRequirements2KHR);
-            vulkanFunctions.vkBindBufferMemory2KHR(device.funcAddress__vkBindBufferMemory2KHR);
-            vulkanFunctions.vkBindImageMemory2KHR(device.funcAddress__vkBindImageMemory2KHR);
-            vulkanFunctions.vkGetPhysicalDeviceMemoryProperties2KHR(physicalDevice.instance().funcAddress__vkGetPhysicalDeviceMemoryProperties2KHR);
+            vulkanFunctions.vkGetInstanceProcAddr(MTD_ADDRESS__vkGetInstanceProcAddr);
+            vulkanFunctions.vkGetDeviceProcAddr(MTD_ADDRESS__vkGetDeviceProcAddr);
+            vulkanFunctions.vkGetPhysicalDeviceProperties(physicalDevice.instance().MTD_ADDRESS__vkGetPhysicalDeviceProperties);
+            vulkanFunctions.vkGetPhysicalDeviceMemoryProperties(physicalDevice.instance().MTD_ADDRESS__vkGetPhysicalDeviceMemoryProperties);
+            vulkanFunctions.vkAllocateMemory(device.MTD_ADDRESS__vkAllocateMemory);
+            vulkanFunctions.vkFreeMemory(device.MTD_ADDRESS__vkFreeMemory);
+            vulkanFunctions.vkMapMemory(device.MTD_ADDRESS__vkMapMemory);
+            vulkanFunctions.vkUnmapMemory(device.MTD_ADDRESS__vkUnmapMemory);
+            vulkanFunctions.vkFlushMappedMemoryRanges(device.MTD_ADDRESS__vkFlushMappedMemoryRanges);
+            vulkanFunctions.vkInvalidateMappedMemoryRanges(device.MTD_ADDRESS__vkInvalidateMappedMemoryRanges);
+            vulkanFunctions.vkBindBufferMemory(device.MTD_ADDRESS__vkBindBufferMemory);
+            vulkanFunctions.vkBindImageMemory(device.MTD_ADDRESS__vkBindImageMemory);
+            vulkanFunctions.vkGetBufferMemoryRequirements(device.MTD_ADDRESS__vkGetBufferMemoryRequirements);
+            vulkanFunctions.vkGetImageMemoryRequirements(device.MTD_ADDRESS__vkGetImageMemoryRequirements);
+            vulkanFunctions.vkCreateBuffer(device.MTD_ADDRESS__vkCreateBuffer);
+            vulkanFunctions.vkDestroyBuffer(device.MTD_ADDRESS__vkDestroyBuffer);
+            vulkanFunctions.vkCreateImage(device.MTD_ADDRESS__vkCreateImage);
+            vulkanFunctions.vkDestroyImage(device.MTD_ADDRESS__vkDestroyImage);
+            vulkanFunctions.vkCmdCopyBuffer(device.MTD_ADDRESS__vkCmdCopyBuffer);
+            vulkanFunctions.vkGetBufferMemoryRequirements2KHR(device.MTD_ADDRESS__vkGetBufferMemoryRequirements2KHR);
+            vulkanFunctions.vkGetImageMemoryRequirements2KHR(device.MTD_ADDRESS__vkGetImageMemoryRequirements2KHR);
+            vulkanFunctions.vkBindBufferMemory2KHR(device.MTD_ADDRESS__vkBindBufferMemory2KHR);
+            vulkanFunctions.vkBindImageMemory2KHR(device.MTD_ADDRESS__vkBindImageMemory2KHR);
+            vulkanFunctions.vkGetPhysicalDeviceMemoryProperties2KHR(physicalDevice.instance().MTD_ADDRESS__vkGetPhysicalDeviceMemoryProperties2KHR);
 
             VmaAllocatorCreateInfo allocatorCreateInfo = new VmaAllocatorCreateInfo(arena);
             allocatorCreateInfo.flags(0);
