@@ -1,6 +1,5 @@
 package yionos.demo.rendering;
 
-import jpgen.NativeTypes;
 import vulkan.VkDevice;
 import vulkan.VkShaderModuleCreateInfo;
 import yionos.demo.Disposable;
@@ -8,7 +7,6 @@ import yionos.demo.Disposable;
 import javax.annotation.Nullable;
 import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.ValueLayout;
 
 import static vulkan.VulkanCore.*;
 import static shaderc.Shaderc.*;
@@ -17,6 +15,7 @@ import static shaderc.shaderc_optimization_level.*;
 import static shaderc.shaderc_compilation_status.*;
 import static vulkan.VkShaderStageFlagBits.*;
 import static vulkan.VkStructureType.*;
+import static java.lang.foreign.ValueLayout.*;
 import static java.lang.foreign.MemorySegment.NULL;
 
 public class ShaderModule implements Disposable
@@ -55,19 +54,19 @@ public class ShaderModule implements Disposable
                     shaderc_compile_options_set_optimization_level(options, shaderc_optimization_level_performance);
                 }
 
-                shadercResult = shaderc_compile_into_spv(compiler, dataBytes, dataBytes.byteSize(), shaderc_stage, arena.allocateUtf8String(compilation.filename),
-                        arena.allocateUtf8String(entryPoint), options);
+                shadercResult = shaderc_compile_into_spv(compiler, dataBytes, dataBytes.byteSize(), shaderc_stage, arena.allocateFrom(compilation.filename),
+                        arena.allocateFrom(entryPoint), options);
                 shaderc_compile_options_release(options);
                 shaderc_compiler_release(compiler);
                 if (shadercResult.equals(NULL))
                 {
-                    throw new VulkanException(STR."Failed to compile shader: \{compilation.filename}");
+                    throw new VulkanException(String.format("Failed to compile shader: %s", compilation.filename));
                 }
 
                 if (shaderc_result_get_compilation_status(shadercResult) != shaderc_compilation_status_success)
                 {
-                    String errorLog = shaderc_result_get_error_message(shadercResult).reinterpret(NativeTypes.UNCHECKED_CHAR_PTR.byteSize()).getUtf8String(0);
-                    throw new VulkanException(STR."Failed to compile shader{\{compilation.filename}} -> \{errorLog}");
+                    String errorLog = shaderc_result_get_error_message(shadercResult).getString(0);
+                    throw new VulkanException(String.format("Failed to compile shader {%s} -> %s", compilation.filename, errorLog));
                 }
 
                 pCode = shaderc_result_get_bytes(shadercResult).reinterpret(shaderc_result_get_length(shadercResult));
@@ -80,14 +79,12 @@ public class ShaderModule implements Disposable
 
             VkShaderModuleCreateInfo shaderModuleCreateInfo = new VkShaderModuleCreateInfo(arena);
             shaderModuleCreateInfo.sType(VK_STRUCTURE_TYPE_SHADER_MODULE_CREATE_INFO);
-            shaderModuleCreateInfo.pNext(NULL);
-            shaderModuleCreateInfo.flags(0);
             shaderModuleCreateInfo.codeSize(pCode.byteSize());
             shaderModuleCreateInfo.pCode(pCode);
 
-            MemorySegment pModule = arena.allocate(ValueLayout.ADDRESS);
+            MemorySegment pModule = arena.allocate(ADDRESS);
             VulkanException.check(vkCreateShaderModule(device, shaderModuleCreateInfo.ptr(), NULL, pModule), "Unable to create shader module");
-            this.m_handle = pModule.get(ValueLayout.ADDRESS, 0);
+            this.m_handle = pModule.get(ADDRESS, 0);
 
             if (!shadercResult.equals(NULL))
             {
@@ -110,7 +107,7 @@ public class ShaderModule implements Disposable
             case VK_SHADER_STAGE_TESSELLATION_CONTROL_BIT -> shaderc_tess_control_shader;
             case VK_SHADER_STAGE_TESSELLATION_EVALUATION_BIT -> shaderc_tess_evaluation_shader;
             case VK_SHADER_STAGE_COMPUTE_BIT -> shaderc_compute_shader;
-            default -> throw new VulkanException(STR."Unsupported shader stage: \{stage}");
+            default -> throw new VulkanException(String.format("Unsupported shader stage: %d", stage));
         };
     }
 
